components/aboutMeContent.module.css
.fullContent {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 0rem;
    background-image: url('/images/AlternateDarkCircle.png');
    background-size: cover;
    /* background-position: center -110vh; */
    /* background-position: right -150vh; */
    background-repeat: no-repeat;
    background-size: 100%;
    width: 100%;
}

.titleContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding-top: 8rem;
    width: 100%;
    padding-bottom: 3rem;
}

.title {
    align-items: center;
    justify-content: center;
    display: flex;
    font-family: MuseoModerno;
    font-size: 6.25rem;
    font-style: normal;
    font-weight: 300;
    line-height: normal;
    letter-spacing: -0.125rem;
    background: linear-gradient(180deg, #A7B2D9 30%, #F7F9FF 51.04%, #939DBF 70%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.subtitle {
    color: var(--Light-blue, #D5DCF4);
    font-family: MuseoModerno;
    font-size: 1.8rem;
    font-style: normal;
    font-weight: 300;
    line-height: 150%;
    width: 64%;
    text-align: center;
    /* 3rem */
}

.flexContainer1 {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-flow: row wrap;
    justify-content: space-evenly;
    color: var(--subheading-light-text, #A7B1CF);
    text-align: start;
    font-family: SF Pro Text, sans-serif;
    font-size: 1.2rem;
    font-style: normal;
    font-weight: 400;
    line-height: 150%;
    width: 60rem;
    /* 2.25rem */
    gap: 2rem;
}

.imageContainer {
    fill: lightgray 50% / cover no-repeat, linear-gradient(180deg, #2A4075 0%, #1D3369 100%);
    mix-blend-mode: luminosity;
    backdrop-filter: blur(23px);
    max-width: 20rem;
}

.f1Text1 {
    max-width: 30rem;
}

.f1Text1 p:first-child {
    margin-top: 0rem;
}

.emphasis {
    color: var(--light-text, #D5DCF4);
    font-weight: 400;
}

.flexContainer2 {
    color: var(--subheading-light-text, #A7B1CF);
    font-family: SF Pro Text, sans-serif;
    font-size: 3.75rem;
    font-style: normal;
    font-weight: 200;
    line-height: 100%;
    max-width: 65%;
    text-align: center;
}

.emphasis2 {
    text-align: center;
    font-family: MuseoModerno;
    font-size: 3.75rem;
    font-style: normal;
    font-weight: 500;
    line-height: 100%;
    /* 3.75rem */
    background: linear-gradient(180deg, #A7B2D9 20%, #F7F9FF 51.04%, #939DBF 93%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    color: var(--light-text, #D5DCF4);
    font-family: MuseoModerno;
    font-size: 3.75rem;
    font-style: normal;
    font-weight: 500;
    line-height: 100%;
}

.midTitle {
    text-align: justify;
    leading-trim: both;
    text-edge: cap;
    font-family: MuseoModerno;
    font-size: 1.2rem;
    font-style: normal;
    font-weight: 700;
    line-height: 150%;
    /* 3rem */
    background: linear-gradient(180deg, #CDD4EB 0%, #F7F9FF 51.04%, #B1B7CC 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.callout {
    font-family: MuseoModerno;
    font-size: 6.25rem;
    /* same size as title */
    font-style: normal;
    font-weight: 200;
    line-height: 150%;
    /* 9.375rem */
    background: var(--Title-Gradient-2, linear-gradient(180deg, #CDD4EB 0%, #F7F9FF 51.04%, #B1B7CC 100%));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    text-align: center;
}

.calloutEmphasis {
    leading-trim: both;
    text-edge: cap;
    font-family: MuseoModerno;
    font-size: 6.25rem;
    font-style: normal;
    font-weight: 600;
    line-height: 150%;
    /* 9.375rem */
    background: var(--Title-Gradient-2, linear-gradient(180deg, #CDD4EB 0%, #F7F9FF 51.04%, #B1B7CC 100%));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.addedPadding {
    padding-top: 4rem;
}

.image3 {
    position: relative;
    width: 20rem;
    height: 25rem;
    overflow: hidden;
    border-radius: 15px;
}

@media (max-width: 1030px) {
    .fullContent {
        /* background-size: 90%;
        background-position: center -2vh; */
    }

    .flexContainer2 {
        font-size: 1.8rem;
        /* same size as subtitle*/
        max-width: 60%;
    }

    .emphasis2 {
        font-size: 1.8rem;
        /* same size as subtitle*/
    }

    .callout {
        /* keep the same size as title or the other quote 
        currently it's the same size as title */
        text-align: center;
    }

}

@media (max-width: 714px) {
    .fullContent {
        background-position: center 5vh;
        background-size: 150%;
    }

    .title {
        font-size: 3rem;
    }

    .subtitle {
        font-size: 1.5rem;
        width: 85%;
    }

    .flexContainer1 {
        width: 85%;
    }

    .flexContainer2 {
        font-size: 1.5rem;
        max-width: 85%;
    }

    .emphasis2 {
        font-size: 1.5rem;
    }


    .callout {
        font-size: 4rem;
        text-align: center;
    }

    .calloutEmphasis {
        font-size: 4rem;
    }
}

